# AGent-Ada

./: .dockerignore  .env.example  .gitignore  .julesrules  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  SECURITY-INTENT.md  SECURITY.md  docker-compose.yml  docker-down.sh  docker-up.sh  install.sh  patch_app.js  patch_web.py  patch_web2.py  plan.md  platform_config.example.json  pyproject.toml
.agents/: AGENTS.md  PARTNER_ENGINEERING_RULES.md
config/: api_keys.json.example  ollama_hosts.json
data/: .gitkeep
discord/: bot.py  bot_config.py  bot_queue.py  config.json
docs/: auth_docker_guide.md  failover_plan.md  installation.md
enuclea/: .gitkeep
plugins/: .gitkeep
scratch/: process_suggestions.md  query_llms.py  run_15_rounds.py  run_optimized_tests.py  sequential_roundtable.py  test_discord_api.py
tests/: conftest.py  test_agy_runner.py  test_api_broker_optimizations.py  test_atera_integration.py  test_boardroom.py  test_bot_moderation.py  test_cache.py  test_checkpoint.py  test_client_support.py  test_concurrency_and_fallback.py  test_custom_route_security.py  test_discord_tools.py  test_dnd.py  test_enuclea_atera.py  test_enuclea_gmail.py  test_enuclea_morgen.py  test_enuclea_webhook.py  test_failover.py  test_grace_monitor.py  test_hermes.py  test_magica_payloads.py  test_memory.py  test_merge.py  test_meta_evaluation.py  test_namespace_resolution.py  test_ollama_clone.py  test_onemin_payloads.py  test_onemin_runner.py  test_orchestrator.py  test_plan_dedup.py  test_plan_drive.py  test_playwright_plugin.py  test_plugin_loader.py  test_priority_lock.py  test_quota.py  (+12 more)
(+119 files in other folders)
