[project]
name = "agent-ada"
version = "0.1.0"
description = "Ada Task Engine and dashboard binding with keyless AntiGravity CLI gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "google-antigravity>=0.1.4",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "aiohttp>=3.9.0",
    "pytest>=8.0.0",
    "discord-py>=2.7.1",
    "yt-dlp",
]

[project.scripts]
ada = "agent.cli:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
