[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "0.1.0"
description = "Hermes-style CLI wrapper around the Google AntiGravity SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-antigravity",
    "rich",
    "prompt-toolkit",
    "fastapi",
    "uvicorn",
    "discord-py>=2.7.1",
    "aiohttp>=3.14.1",
    "google-auth-oauthlib>=1.4.0",
    "google-auth-httplib2>=0.4.0",
    "google-api-python-client>=2.197.0",
]

[project.scripts]
agent = "agent.cli:main"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent = ["static/*", "static/**/*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

